# ESP32

./: .gitignore  CMakeLists.txt  CURRENT_WIRING.md  EDGE_IMPULSE_INTEGRATION.md  EDGE_IMPULSE_SETUP.md  GPIO_QUICK_REFERENCE.md  GPIO_UPDATE_SUMMARY.md  INMP441_24BIT_MODE.md  LICENSE  NEW_GPIO_PLAN.md  NEW_WIRING.md  README.md  SD_CARD_RE_ENABLED.md  SD_CARD_TROUBLESHOOTING.md  TTS_PSRAM_PLAYBACK.md  build_lemon.bat  partitions_16mb.csv  quick_build.bat  sdkconfig.defaults
.cache/clangd/index/: audio_upload.h.38AA9E682C972DFB.idx  audio_upload_optimized.c.64BD39D77E7DDEEF.idx  hi_esp_audio.c.681E1CA9AC7B2394.idx  hi_esp_audio.h.B4696769A7F8B773.idx  hi_esp_keyword.c.097B1C312E1BD80F.idx  sd_card_manager.c.29ED7BF5029595A2.idx  sd_card_manager.h.6640C58A68D09637.idx  wifi_manager.c.1EA1F23414D3769C.idx  wifi_manager.h.88702B26CC16F362.idx
.kiro/steering/: product.md  structure.md  tech.md
Data/temp_extract/: README.txt
Data/temp_extract/model-parameters/: model_metadata.h
Data/temp_extract/tflite-model/: tflite_learn_829922_4_compiled.cpp
components/lemong_wake/: CMakeLists.txt  INTEGRATION.md
components/lemong_wake/model-parameters/: model_variables.h
components/lemong_wake/tflite-model/: tflite_learn_829922_4_compiled.h
main/: CMakeLists.txt  audio_upload.h  audio_upload_optimized.c  ei_wrapper.cpp  ei_wrapper.h  hi_esp_audio.c  hi_esp_audio.h  hi_esp_keyword.c  hi_lemon_keyword.c  location_service.c  location_service.h  sd_card_manager.c  sd_card_manager.h  wifi_manager.c  wifi_manager.h
